testsuite/tests/interpreter_errors/invalid_field_dot_access/test.out
main.adb
script.lkql:1:28: error: No field named nonExistingField on nodes of kind: CompilationUnit
1 | let p = query p @ _ when p.nonExistingField is ObjectDecl
  |                            ^^^^^^^^^^^^^^^^ 

